--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="navbar">
     <div class="navdiv">
         <div class="Logo">
-            <img src="te.jpg"  class="yoy"alt="">
+         <a href="index.html">   <img src="te.jpg"  class="yoy"alt=""></a>
         </div>
         <ul>
             <li><a href="Aboutus.html">About Us<a></li>
