--- a/aboutus.html
+++ b/aboutus.html
@@ -15,7 +15,7 @@
 
     <div class="navbar">
     <div class="navdiv">
-        <div class="Logo"><img src="te.jpg"  class="yoy"alt=""></div>
+         <a href="index.html">   <img src="te.jpg"  class="yoy"alt=""></a>
         <ul>
             <li><a href="Aboutus.html">About Us<a></li>
             <li><a href="menu.html">Menu</a></li>
